# goit-pyweb-hw-2

./: Dockerfile  app.py  main.py  pyproject.toml
