[tool.poetry]
name = "phone-app"
version = "0.1.0"
description = ""
authors = ["KyryloDolia <fr1ghtn1ght2101@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.5"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
